# organized-agents

./: .env.example  .githooks.config  .gitignore  ACADEMY_SYSTEM_READY.md  ACADEMY_TESTING_WORKFLOW.md  BUILD_EXECUTION_ANALYSIS.md  CLAUDE.md  CLAUDE_CODE_PREPARATION_GUIDE.md  DEV_CONTAINER_SETUP.md  EDUCATION_SYSTEM_IMPLEMENTATION.md  EDUCATION_SYSTEM_TEST_GUIDE.md  HOOK_TEST.md  ICON_UPDATE_GUIDE.md  INTELLIGENT_BUILD_SYSTEM_DOCS.md  LICENSE  MANUAL_BUILD_GUIDE.md  PLAN_MODE_IMPLEMENTATION.md  PLAN_MODE_OPPORTUNITY.md  PLAN_MODE_QUICKSTART.md  PLAN_MODE_ROADMAP.md  README.md  STANDALONE_APP_GUIDE.md  ULTRATHINK_MISSION_COMPLETE.md  alpha-testing-validation.sh  auto-build-system.sh  build-app.sh  build-fixed-app.sh  build-production.sh  claudia_env_test.sh  commit_bmad.sh  copy_files.py  create-standalone-app.sh  create_app_bundle.sh  execute_push.sh  finalize_app.sh  fix-blank-app.sh  generate-icons.sh  index.html  install-standalone.sh  install-tauri-cli.sh  (+28 more)
.devcontainer/: .gitkeep  Dockerfile  README.md  devcontainer.json  docker-compose.yml  setup.sh  test-container.sh
agents/: README.md
cc_agents/: README.md  alpha-testing-agent.claudia.json  codebase-mastery-agent.claudia.json  debug-mastery-agent.claudia.json  desktop-build-agent.claudia.json  environment-setup-agent.claudia.json  (+8 more)
community/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_cleanup.rs  lib.rs  main.rs
src-tauri/src/academy/: commands.rs  mod.rs
src-tauri/src/bmad/: communication.rs  file_watcher.rs  mod.rs  project.rs  state_manager.rs  types.rs  workflow.rs
src-tauri/src/commands/: agents.rs  auth.rs  bmad_commands.rs  ide_commands.rs  mod.rs  orchestration.rs  router.rs
src-tauri/src/education/: commands.rs  mod.rs
(+96 files in other folders)
