[package]
name = "organized-agents"
version = "1.0.0"
description = "Organized AI - The world's first comprehensive parallel agentic development education system"
authors = ["BHT Labs / Organized AI"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "organized_agents_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2"

# BMAD Integration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"                    # YAML parsing for state files
serde_json = "1.0"                    # JSON for communication
notify = "6.0"                        # File system watching
walkdir = "2.0"                       # Directory traversal
tokio = { version = "1.0", features = ["full"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"                     # Error handling
anyhow = "1.0"                        # Error context
tracing = "0.1"                       # Logging
tracing-subscriber = "0.3"

# Keep for education system
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"

# Additional dependencies for BMAD
# walkdir already included above

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
